# MedPeer

./: README.md  app.py  config.py  extensions.py  forms.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py  wsgi.py
blueprints/: admin.py  api.py  auth.py  main.py  messages.py  posts.py
migrations/: 001_initial.sql
static/css/: style.css
static/js/: main.js
templates/: about.html  base.html  contact.html  dashboard.html  index.html  messages.html  notifications.html  post_detail.html  profile.html  search.html  settings.html
templates/admin/: dashboard.html  user_detail.html  users.html
templates/auth/: change_password.html  edit_profile.html  forgot_password.html  login.html  register.html  reset_password.html
templates/errors/: 404.html  500.html
templates/legal/: privacy.html  terms.html
templates/messages/: compose.html  conversation.html  inbox.html  search.html
